internal-gateway/v1alpha1/i-gateway.yaml
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: internal-gateway
spec:
  gatewayClassName: gke-l7-rilb
  listeners:
    - protocol: HTTP
      port: 80
      routes:
        kind: HTTPRoute
        selector:
          matchLabels:
            gateway: internal-gateway
  addresses:
    - type: NamedAddress
      value: i-gw-ip
