internal-gateway/v1alpha1/i-gw-httproute-split.yaml
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: internal-httproute-split
  labels:
    gateway: internal-gateway
spec:
  hostnames:
    - "i-gw.gcpx.org"
  rules:
    - forwardTo:
        - serviceName: whereami-v1
          port: 8080
          weight: 40
        - serviceName: whereami-v2
          port: 8080
          weight: 30
        - serviceName: whereami-v3
          port: 8080
          weight: 30
